--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,7 +2,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100%;
-  background-color: #0e0b0e;
+  background-color: #252b29;
 }
 
 a,
