--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,8 @@
 			{% set buttons = [
 				{ id: '#aboutme', label: 'About Me' },
 				{ id: 'timeline', label: 'CV' },
-				{ id: '#projects', label: 'Projects' }
+				{ id: '#projects', label: 'Projects' },
+				{ id: '#contact', label: 'Contact' }
 			] %}
 			{% include 'pausemenu.html.twig' with {'buttons': buttons} %}
 
