--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -115,3 +115,20 @@ html {
 .shadow-custom {
   box-shadow: 0 0.75rem 1rem rgba(0, 0, 0, 0.8) !important;
 }
+
+.btn-outline-main {
+  --bs-btn-color: #6F1B6F;
+  --bs-btn-border-color: #6F1B6F;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #6F1B6F;
+  --bs-btn-hover-border-color: #6F1B6F;
+  --bs-btn-focus-shadow-rgb: 13, 110, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #6F1B6F;
+  --bs-btn-active-border-color: #6F1B6F;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #6F1B6F;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #6F1B6F;
+  --bs-gradient: none;
+}
