--- a/templates/index/IndexHeader.twig
+++ b/templates/index/IndexHeader.twig
@@ -1,6 +1,6 @@
 {# templates/contact.html.twig #}
 
-<div class="row justify-content-center {% if darkbg %} bg-dark rounded-5 border border-light {% endif %}">
+<div class="row m-0 p-0 justify-content-center {% if darkbg %} bg-dark rounded-5 border border-light {% endif %}">
 	<a class="col-auto pt-1" href="#{{ textRef }}">
 		<h6 class="text-center text-capitalize mb-4 white-text d-block d-md-none">{{ headText }}</h6>
 		<h4 class="text-center text-capitalize mb-4 white-text d-none d-md-block">{{ headText }}</h4>
