--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -14,7 +14,7 @@
 		.timeline-container:before {
 			content: '';
 			position: absolute;
-			left: 48.5vw;
+			left: 49vw;
 			top: 0;
 			bottom: 0;
 			width: 1vw;
@@ -26,9 +26,9 @@
 	<div id="timeline" class="row m-0 p-0 accent-bg-dark" style="min-height: 50vh;">
 		{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
 
-		<div class="row fixed-top position-sticky main-bg-dark rounded-4">
+		<div class="col-12 row fixed-top py-2 position-sticky main-bg-dark rounded-4">
 
-			<div class="col-12 col-md-8 mt-2">
+			<div class="col-md-8 m-0 p-0">
 				{% set all_tags = [] %}
 				{% for event in timeline_events %}
 					{% for tag in event.main.tags %}
@@ -54,7 +54,7 @@
 
 				</div>
 			</div>
-			<div class="col-12 col-md-4 mt-2">
+			<div class="col-md-4 m-0 p-0">
 				<h6>Filter by Year:</h6>
 				<div class="btn-group" role="group" aria-label="Year buttons">
 					{% set years = [] %}
@@ -91,42 +91,40 @@
 		{% endif %}
 
 		{% for year in years %}
-			<div class="events-wrapper " id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
-				{% set events_in_year = timeline_events|filter(e => (e.main.startDate|date('Y') == year or e.main.endDate|date('Y') == year)) %}
+			{% set events_in_year = timeline_events|filter(e => (e.main.startDate|date('Y') == year or e.main.endDate|date('Y') == year)) %}
 
-				<h4 class="col-3 bg-dark text-center shadow-custom mx-auto m-0 py-3 text-warning border border-warning rounded-3">{{ year }}</h4>
-
-				<div
-					class="timeline-container row justify-content-center align-items-center" style="min-height: 50vh; position: relative;">
+			<div class="events-wrapper container-fluid row justify-content-center align-items-center text-white m-0" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
+				<div class="row justify-content-center mt-4 m-0">
+					<h4 class="col-auto bg-dark text-center shadow-custom m-0 px-5 py-3 text-warning border border-warning rounded-3">{{ year }}</h4>
+				</div>
+				<div class="timeline-container row justify-content-center p-0 m-0">
 					<!-- Ensure relative positioning for the container -->
 					{% for event in events_in_year %}
-					{{ dump(loop.index * event.main.startDate|date('m') - event.main.endDate|date('mmm')) }}
-						<div class="card {% if (loop.index * event.main.startDate|date('m') - 1 - event.main.endDate|date('mmm'))  % 2 == 0 %} main-bg-gradient {% else %} main-bg-gradient-alter {% endif %} {{ loop.index }} text-white rounded-4 shadow-custom timeline-event col-12 row m-5" style="width: 66vw;">
+						<div class="col-12 row justify-content-center">
+							<div class="card rounded-4 m-5 shadow-custom timeline-event main-bg-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
 
-							<div class="card-body row justify-content-center text-center">
+								<div class="card-body row m-0 justify-content-center text-center">
 
-								<h4 class="col-auto card-title">{{ event.main.name }}
-									<strong class='accent-color'>{{ event.main.startDate|date('F-Y') ~ ' - ' ~ event.main.endDate|date('F-Y') }}</strong>
-								</h4>
+									<h5 class="col-auto card-title">
+										<strong class='accent-color'>{{ event.main.startDate|date('F-Y') ~ ' - ' ~ event.main.endDate|date('F-Y') }}</strong>
+									</h5>
+									<h3 class="col-auto card-title">{{ event.main.name }}</h3>
 
-								<p>
-									Brief Description:
-									<p>{{ event.main.description != '' ? event.main.description ?? 'not defined' : 'not defined'}}</p>
+									<p>Brief Description:</p>
+									<p class="m-0">{{ event.main.description != '' ? event.main.description ?? 'not defined' : 'not defined'}}</p>
 								</p>
 
-								<button class="col-auto custom-btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="true" aria-controls="collapseWidthExample">
-									More Info
-								</button>
-								<h5 class="card-title">Asociated projects:</h5>
-								<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;">
-									<img src="" style="height: 100%; width: auto;" alt="{{ event.main.name }}">
-								</div>
+								{% if event.bullets is not empty %}
 
+									<div class="col my-2">
+										<button class="custom-btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="true" aria-controls="collapseWidthExample">
+											More Info
+										</button>
+									</div>
 
-								<div class="col-auto">
-									<div style="min-height: 120px;">
-										<div class="collapse collapse-horizontal" id="collapseWidthExample">
-											<div class="card card-body" style="width: 300px;">
+									<div class="col-12">
+										<div class="collapse" id="collapseWidthExample">
+											<div class="card card-body main-bg-dark">
 												<ul class="list-group list-group-flush">
 													{% for point in event.bullets %}
 														<li class="list-group-item">{{ point.name }}</li>
@@ -135,29 +133,35 @@
 											</div>
 										</div>
 									</div>
+
+								{% endif %}
+
+								<h5 class="card-title">Asociated projects:</h5>
+								<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;">
+									<img src="" style="height: 100%; width: auto;" alt="{{ event.main.name }}">
 								</div>
 							</div>
 
 							<div class="tags" style="display: none;">{{ event.main.tags|json_encode|raw }}</div>
-						</div>
-					{% endfor %}
-					<div class="col-12 d-flex row flex-column justify-content-center align-items-center ">
-						<h6 id="noTimelineEvents" class="col-6 py-5 accent-bg-dark text-center mx-auto text-secondary border border-secondary rounded-3" style="display: none; z-index: 100;">
-							No events available.
-						</h6>
-					</div>
-				</div>
 
+						</div>
+					</div>
+				{% endfor %}
+				<div class="col-12 d-flex row flex-column justify-content-center align-items-center ">
+					<h6 id="noTimelineEvents" class="col-6 py-5 accent-bg-dark text-center mx-auto text-secondary border border-secondary rounded-3" style="display: none; z-index: 100;">
+						No events available.
+					</h6>
+				</div>
 			</div>
 
-		{% endfor %}
-		<div class="row d-flex container-fluid flex-column justify-content-center align-items-center mb-5">
-			<button class="btn btn-outline-success bg-dark shadow-custom col-3 text-center m-0 py-3" onclick="window.location.href='/#contact'">
-				Let's build together!</button>
 		</div>
 
+	{% endfor %}
+	<div class="row d-flex container-fluid flex-column justify-content-center align-items-center mb-5 p-0 m-0">
+		<button class="btn btn-outline-success bg-dark shadow-custom col-3 text-center m-0 py-3" onclick="window.location.href='/#contact'">
+			Let's build together!</button>
 	</div>
 
-	<script src="{{ asset('js/timeLine.js') }}"></script>
+</div>
 
-{% endblock %}
+<script src="{{ asset('js/timeLine.js') }}"></script>{% endblock %}
