--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -93,14 +93,15 @@
 		{% for year in years %}
 			{% set events_in_year = timeline_events|filter(e => (e.main.startDate|date('Y') == year or e.main.endDate|date('Y') == year)) %}
 
-			<div class="events-wrapper container-fluid row justify-content-center align-items-center text-white m-0" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
+			<div class="events-wrapper container-fluid row justify-content-center align-items-center m-0" id="events-{{ year }}" style="display: {{ loop.first ? 'block' : 'none' }};">
 				<div class="row justify-content-center mt-4 m-0">
 					<h4 class="col-auto bg-dark text-center shadow-custom m-0 px-5 py-3 text-warning border border-warning rounded-3">{{ year }}</h4>
 				</div>
-				<div class="timeline-container row justify-content-center p-0 m-0">
+				<div
+					class="timeline-container row justify-content-center p-0 m-0 ">
 					<!-- Ensure relative positioning for the container -->
 					{% for event in events_in_year %}
-						<div class="col-12 row justify-content-center">
+						<div class="col-12 row justify-content-center text-white">
 							<div class="card rounded-4 m-5 shadow-custom timeline-event main-bg-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
 
 								<div class="card-body row m-0 justify-content-center text-center">
@@ -114,7 +115,7 @@
 									<p class="m-0">{{ event.main.description != '' ? event.main.description ?? 'not defined' : 'not defined'}}</p>
 								</p>
 
-								{% if event.bullets is not empty %}
+								{% if event.bullets is defined %}
 
 									<div class="col my-2">
 										<button class="custom-btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="true" aria-controls="collapseWidthExample">
@@ -136,10 +137,15 @@
 
 								{% endif %}
 
-								<h5 class="card-title">Asociated projects:</h5>
-								<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;">
-									<img src="" style="height: 100%; width: auto;" alt="{{ event.main.name }}">
-								</div>
+								{% if event.projects is defined %}
+									<h5 class="card-title">Asociated projects:</h5>
+									{% for project in event.projects %}
+										<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;" onclick="window.location.href='{{ path('app_project_detail', {'id': project.id}) }}'">
+											<img src="{{ project.iconref }}" style="height: 100%; width: auto;" alt="{{ project.name }}">
+										</div>
+										<h6 class="card-title">{{project.name}}</h6>
+									{% endfor %}
+								{% endif %}
 							</div>
 
 							<div class="tags" style="display: none;">{{ event.main.tags|json_encode|raw }}</div>
