--- a/templates/ProjectsHighlights.twig
+++ b/templates/ProjectsHighlights.twig
@@ -4,6 +4,7 @@
 
 	<div class="d-flex flex-column justify-content-center align-items-center" style="min-height: 75vh; width: 100%;">
 
+
 		<div class="container rounded-5 {{ color ?? 'main-bg-gradient' }}  m-3 my-md-4 shadow-custom">
 			<div class="row justify-content-center m-2">
 
@@ -18,7 +19,8 @@
 				{% endfor %}
 			</div>
 			<div class="row justify-content-center">
-				<button type="button" class="col-auto custom-btn rounded-2 p-1 m-2 accent-bg text-white" onclick="window.location.href='{{ path('app_game_projects', {'type': type}) }}'" data-bs-dismiss="modal">&nbsp;&nbsp;All {{type}}...&nbsp;&nbsp;</button>
+				<button type="button" class="col-auto custom-btn rounded-2 p-1 m-2 accent-bg text-white" onclick="window.location.href='{{ path('app_game_projects', {'type': type}) }}'" data-bs-dismiss="modal">&nbsp;&nbsp;All
+					{{type}}...&nbsp;&nbsp;</button>
 			</div>
 		</div>
 	</div>
