small chandes about

--- a/templates/AboutMe.twig
+++ b/templates/AboutMe.twig
@@ -28,7 +28,7 @@
 	</div>
 	<div class="container m-1 p-2 main-bg-dark-translucent rounded-5 border border-light d-flex flex-column align-items-center justify-content-around" style="min-height: 30%;">
 		<div class="row mt-md-0 mt-md-3 m-1">
-			<h2 class="p-md-2 typing-effect text-center accent-color">Web & Game Dev</h2>
+			<h2 class="p-md-2 text-center accent-color">Web & Game Dev <i class="fa fa-gamepad" aria-hidden="true"></i> </h2>
 		</div>
 		<div class="row mx-md-5 ">
 			<p class="typing-effect white-text text-justify text-lg m-1" style="font-size: 14px;">
