--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -12,8 +12,8 @@
 	</nav>
 </div>
 
-<button class="custom-btn position-fixed rounded-4 accent-bg" style="z-index: 1050; top: 5px; right: 5px;" onclick="playSound('audiopress')" data-bs-target="#pauseMenuModal" aria-label="Pause menu button" data-bs-toggle="modal" type="button">
-	<i class="fa fa-pause fa-lg my-2 mx-1" style="color: #ffffff; "></i>
+<button class="custom-btn position-fixed rounded-4 accent-bg d-flex align-items-center" style="z-index: 1050; top: 5px; right: 5px;" onclick="playSound('audiopress')" data-bs-target="#pauseMenuModal" aria-label="Pause menu button" data-bs-toggle="modal" type="button">
+	<i class="fa fa-home my-2 mx-1 fa-2xl" aria-hidden="true" style="color: #ffffff;"></i> <p class="p-0 m-0 d-none d-md-block">MENU</p>
 </button>
 
 
