--- a/templates/GameHighlights.twig
+++ b/templates/GameHighlights.twig
@@ -6,8 +6,8 @@
 
 		<div class="container-xl rounded-3 main-bg-gradient-circle m-3 my-md-2  p-0 shadow-custom">
 
-			<div id="carouselExampleIndicators" class="carousel slide px-md-5 pt-4">
-				<div class="carousel-inner rounded-4 bg-dark ratio ratio-16x9 px-5" style="height: 45vh;">
+			<div id="carouselExampleIndicators" class="carousel slide px-md-5 pt-4 ">
+				<div class="carousel-inner rounded-4 bg-dark px-5 mb-2 shadow" style="height: 45vh; aspect-ratio:2;">
 					<div class="carousel-item active">
 						<img src="..." class="" alt="...">
 					</div>
@@ -28,24 +28,24 @@
 				</button>
 			</div>
 
-			<div class="d-flex justify-content-start px-0 pt-2 pb-0 mb-3 m-0 rounded-4 shadow" style="overflow-x: auto; overflow-y: hidden;">
-				<div class="col-4 p-1 rounded-4 ">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class=" ratio ratio-1x1 rounded-4 shadow active" aria-current="true">1</button>
+			<div class="d-flex justify-content-start px-0 pb-0 mb-3 m-0 rounded-4 shadow" style="overflow-x: auto; overflow-y: hidden;">
+				<div class="col-3 p-1 rounded-4 ">
+					<button data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="btn btn-primary d-flex flex-column justify-content-center align-items-center rounded-4 w-100 active" style="aspect-ratio:1;" >1</button>
 				</div>
-				<div class="col-4 p-1 rounded-4 ">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="btn btn-primary ratio ratio-1x1 rounded-4 shadow" aria-label="Slide 2">2</button>
+				<div class="col-3 p-1 rounded-4 ">
+					<button data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="btn btn-primary d-flex flex-column justify-content-center align-items-center rounded-4 w-100" style="aspect-ratio:1;">2</button>
 				</div>
-				<div class="col-4 p-1 rounded-4">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary ratio ratio-1x1 rounded-4 shadow" aria-label="Slide 3">3</button>
+				<div class="col-3 p-1 rounded-4">
+					<button data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary d-flex flex-column justify-content-center align-items-center rounded-4 w-100" style="aspect-ratio:1;">3</button>
 				</div>
-				<div class="col-4 p-1 rounded-4">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary ratio ratio-1x1 rounded-4 shadow" aria-label="Slide 3">3</button>
+				<div class="col-3 p-1 rounded-4">
+					<button data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary d-flex flex-column justify-content-center align-items-center rounded-4 w-100" style="aspect-ratio:1;">3</button>
 				</div>
-				<div class="col-4 p-1 rounded-4">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary ratio ratio-1x1 rounded-4 shadow" aria-label="Slide 3">3</button>
+				<div class="col-3 p-1 rounded-4">
+					<button data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary d-flex flex-column justify-content-center align-items-center rounded-4 w-100" style="aspect-ratio:1;">3</button>
 				</div>
-				<div class="col-4 p-1 rounded-4">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary ratio ratio-1x1 rounded-4 shadow" aria-label="Slide 3">3</button>
+				<div class="col-3 p-1 rounded-4">
+					<button data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="btn btn-primary d-flex flex-column justify-content-center align-items-center rounded-4 w-100" style="aspect-ratio:1;">3</button>
 				</div>
 			</div>
 
